# blood-report-interpreter

./: README.md  main.py  pyproject.toml  requirements.txt  vercel.json
app/: fixed_prompts.py  main.py
app/static/: login_page.css  script.js  sidebar.css  styles.css
app/templates/: index.html  login_page.html
templates/: index.html
