[tool.poetry]
name = "blood scan report"
version = "0.1.0"
description = ""
authors = ["Devyansh Vakharia <devyanshvakharia2510@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pdfplumber = "^0.11.5"
python-dotenv = "^1.0.1"
google-generativeai = "^0.8.4"
fastapi = "^0.115.6"
jinja2 = "^3.1.5"
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
